# wql

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/wql-capi/: Cargo.toml  build.rs  cbindgen.toml
crates/wql-capi/include/: wql.h
crates/wql-capi/src/: lib.rs
crates/wql-capi/tests/: c_e2e.rs  c_smoke.rs  smoke.c  wqlc_c.c
crates/wql-compiler/: Cargo.toml  build.rs
crates/wql-compiler/proto/: testdata.proto
crates/wql-compiler/src/: ast.rs  bind.rs  compile.rs  emit.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/wql-compiler/tests/: e2e.rs  e2e_datadriven.rs  e2e_schema.rs  smoke.rs
crates/wql-compiler/tests/testdata/: e2e.txt  testdata.rs
crates/wql-ir/: Cargo.toml
crates/wql-ir/src/: codec.rs  lib.rs  types.rs
crates/wql-runtime/: Cargo.toml
crates/wql-runtime/src/: error.rs  lib.rs  test_utils.rs  vm.rs  vm_tests.rs  wire.rs
crates/wql-wasm/: Cargo.toml  build.rs
crates/wql-wasm/src/: lib.rs
crates/wqlc/: Cargo.toml
crates/wqlc/data/: template.wasm
crates/wqlc/src/: main.rs  wasm_eval.rs  wasm_template.rs
crates/wqlc/tests/: cli_e2e.rs
doc/: ARCHITECTURE.md  IR.md  PRD.md  plan-unified-eval.md
doc/specs/: 01-scaffold.md  02-ir.md  03-runtime.md  04-parser.md  05-compiler.md  HIGHLEVEL.md
