[package]
name    = "wql-capi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["regex"]
regex   = [
    "wql-runtime/regex",
    "wql-compiler/regex",
]

[dependencies]
wql-runtime  = { workspace = true }
wql-compiler = { workspace = true }

[build-dependencies]
cbindgen = "0.27"

# Cannot use lints.workspace = true and override simultaneously.
# Duplicate workspace lints here with unsafe_code overridden to allow.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all      = "warn"
pedantic = "warn"
