[package]
name    = "wql-compiler"
version = "0.1.0"
edition = "2021"

[features]
default = ["regex"]
regex   = []    # enables compilation of BYTES_MATCHES instructions

[dependencies]
wql-ir      = { workspace = true }
prost-types = "0.13"    # FileDescriptorSet for schema binding

[lints]
workspace = true
