[package]
name    = "wql-compiler"
version = "0.1.0"
edition = "2021"

[features]
default = ["regex"]
regex   = ["wql-ir/regex"]    # enables compilation of BYTES_MATCHES instructions

[dependencies]
wql-ir      = { workspace = true }
prost       = "0.13"
prost-types = "0.13"    # FileDescriptorSet for schema binding

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
wql-runtime    = { workspace = true }
prost-reflect  = { version = "0.14", features = ["serde"] }
serde_json     = "1"

[lints]
workspace = true
