[package]
name    = "wql-ir"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc"]
alloc   = []         # enables encode (Vec<u8> output); always on except in
                     # hypothetical bare-metal embeddings
regex   = []         # enables BYTES_MATCHES instruction variant
serde   = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[lints]
workspace = true
