[package]
name    = "wqlc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wqlc"
path = "src/main.rs"

[features]
wasm = ["dep:wasmtime"]

[dependencies]
wql-compiler  = { workspace = true }
wql-runtime   = { workspace = true }
wql-ir        = { workspace = true }
prost-reflect = { version = "0.14", features = ["serde"] }
serde_json    = "1"
wasmtime      = { version = "32", optional = true, default-features = false, features = ["cranelift", "runtime"] }

[dev-dependencies]
prost         = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
serde_json    = "1"
tempfile      = "3"

[lints]
workspace = true
